--- a/aulas/03-estrategias/slides-estrategias.Rmd
+++ b/aulas/03-estrategias/slides-estrategias.Rmd
@@ -25,8 +25,6 @@ knitr::opts_chunk$set(
   fig.height=6,
   fig.align='center'
 )
-
-library(tidyverse)
 ```
 
 # Vamos falar de
@@ -45,19 +43,24 @@ library(tidyverse)
 
 
 ```{r echo=FALSE}
-library(dplyr)
-library(ggplot2)
-
-n <- 10000
-
-df <- data_frame(
-  x1 = rnorm(n),
-  x2 = rnorm(n),
-  y = x2 > 0
-)
-
-ggplot(df, aes(x = x1, y= x2, color = y)) + geom_point(size = 0.1)
+library(tidyverse)
+adv <- read_csv("data/Advertising.csv")
 ```
+
+Somos consultores e fomos contratados para dar conselhos para uma empresa aumentar as suas vendas.
+
+--
+
+Obtivemos o seguinte banco de dados
+
+```{r}
+adv %>% 
+  gather(midia, investimento, -sales) %>% 
+  ggplot(aes(x = investimento, y = sales)) + 
+  geom_point() +
+  facet_wrap(~midia, scales = "free")
+```
+
 
 
 ---
