--- a/aulas/05-regressao-logistica-regularizacao/regressao-logistica.Rmd
+++ b/aulas/05-regressao-logistica-regularizacao/regressao-logistica.Rmd
@@ -96,6 +96,7 @@ library(dplyr)
 library(recipes)
 library(caret)
 library(rsample)
+library(skimr)
 ```
 
 # Banco de dados
@@ -109,17 +110,34 @@ glimpse(credit_data)
 ggplot(credit_data, aes(x = Status)) + 
   geom_bar()
 
-p <- GGally::ggduo(
-  credit_data,
-  columnsY = "Status", 
-  columnsX = colnames(credit_data)[colnames(credit_data) != "Status"]
-  )
-p
+skim(credit_data)
+
+credit_data %>% 
+  group_by(Status) %>% 
+  skim()
 ```
 
 # Ajustando modelos
 
-## Preparação
+```{r}
+receita <- recipe(Status ~ ., data = credit_data) %>%
+  step_meanimpute(all_numeric(), -all_outcomes()) %>%
+  step_modeimpute(all_nominal(), -all_outcomes()) %>%
+  step_dummy(all_nominal(), -all_outcomes()) %>%
+  step_corr(all_predictors()) %>%
+  step_nzv(all_predictors())
+
+receita
+
+modelo <- train(
+  receita, 
+  credit_data, 
+  method = "glm", 
+  family = "binomial", 
+  trControl = trainControl(method = "cv", number = 5)
+)
+modelo
+```
 
 ```{r}
 metricas <- function(data, lev = NULL, model = NULL) {
@@ -137,18 +155,7 @@ train_control <- trainControl(
 )
 ```
 
-## Regressão Logística
-
 ```{r}
-receita <- recipe(Status ~ ., data = credit_data) %>%
-  step_meanimpute(all_numeric(), -all_outcomes()) %>%
-  step_modeimpute(all_nominal(), -all_outcomes()) %>%
-  step_dummy(all_nominal(), -all_outcomes()) %>%
-  step_corr(all_predictors()) %>%
-  step_nzv(all_predictors())
-
-receita
-
 modelo <- train(
   receita, 
   credit_data, 
@@ -161,6 +168,78 @@ modelo
 summary(modelo)
 cor(credit_data %>% select_if(is.numeric), use = "complete.obs")
 ```
+
+# Regularização
+
+- Penalizar os coeficientes no processo de estimação
+- Encolher os coeficientes na direção do zero 
+- Diminui a variância do modelo em troca de um pouco de viés
+
+Regressão ridge
+
+$$
+L(y, f(x)) - \lambda\sum_{i=1}^pb_i^2
+$$
+
+LASSO
+
+$$
+L(y, f(x)) - \lambda\sum_{i=1}^p|b_i|
+$$
+
+Podemos reescrever de outra forma:
+
+$$
+\underset{\beta}{\text{minimizar}}L(y, f(x)) \text{ sujeito à } \sum_{j=1}^p \beta_j^2 \leq s \text{ ou } \sum_{j=1}^p |\beta_j| \leq s
+$$
+
+```{r}
+knitr::include_graphics("lasso_ridge.png")
+```
+
+
+```{r}
+receita <- recipe(Status ~ ., data = credit_data) %>%
+  step_meanimpute(all_numeric(), -all_outcomes()) %>%
+  step_modeimpute(all_nominal(), -all_outcomes()) %>%
+  step_dummy(all_nominal(), -all_outcomes()) %>%
+  step_center(all_predictors()) %>%
+  step_scale(all_predictors())
+
+modelo <- train(
+  receita, 
+  credit_data, 
+  method = "glmnet", 
+  family = "binomial", 
+  trControl = train_control, 
+  metric = "ROC"
+)
+
+modelo
+modelo$bestTune
+coef(modelo$finalModel, s = modelo$bestTune$lambda)
+```
+
+```{r}
+tune_grid <- expand.grid(alpha = c(0, 0.55, 1), lambda = 10^(-6:0))
+
+modelo <- train(
+  receita, 
+  credit_data, 
+  method = "glmnet", 
+  family = "binomial", 
+  trControl = train_control, 
+  metric = "ROC", 
+  tuneGrid = tune_grid
+)
+
+modelo
+modelo$bestTune
+coef(modelo$finalModel, s = modelo$bestTune$lambda)
+plot(modelo)
+varImp(modelo)
+```
+
 
 # Exercício
 
@@ -175,14 +254,3 @@ glimpse(attrition)
 ```{r}
 
 ```
-
-
-
-
-
-
-
-
-
-    
-    
