--- a/aulas/05-regressao-logistica-regularizacao/exercicio.Rmd
+++ b/aulas/05-regressao-logistica-regularizacao/exercicio.Rmd
@@ -5,10 +5,15 @@ output: html_document
 
 # Exercício
 
-Ajuste um modelo de regressão logística e um de LASSO p/ prever o churn de funcionários no banco de dados `attrtion`.
+Ajuste um modelo de regressão logística e um de LASSO p/ prever o churn de funcionários no banco de dados `attrition`.
 
 ```{r}
+library(tidyverse)
+library(recipes)
+library(caret)
 library(rsample)
+
+
 data(attrition, package = "rsample")
 glimpse(attrition)
 ```
